sonos/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonos-api
  name: sonos-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5005
  selector:
    app: sonos-api
  type: ClusterIP
