sonos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "ca-issuer"
    cert-manager.io/common-name: "sonos.raspberrypi"
  name: "sonos-ingress"
  namespace: sonos-api
spec:
  rules:
  - host: sonos.raspberrypi
    http:
      paths:
      - backend:
          service:
            name: sonos-api
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonos.raspberrypi
    secretName: sonos-auto-certificate-key-pair
